fix header spacing

--- a/style.css
+++ b/style.css
@@ -4,17 +4,23 @@ body {
 
 /* header section */
 .header {
-    display: flex;
+    display:flex;
+    justify-content: center;
     background-color: #1f2937;
+}
+
+.header-container {
+    display: flex;
     color: white;
     justify-content: space-between;
     height: 50px;
     align-items: center;
+    width: 850px;
 }
 
 .header-links {
     display: flex;
-    gap: 20px;
+    gap: 30px;
     color: #e5e7eb;
     font-size: 18px;
 }
